--- a/src/main/resources/templates/manager/bookingmanager.html
+++ b/src/main/resources/templates/manager/bookingmanager.html
@@ -20,7 +20,7 @@
             <td>
                 <p th:text="${booking.status_booking}"></p>
             </td>
-            <td><a th:href="@{/confirm/} + ${booking.id_booking}" >Confirm</a> </td>
+            <td><a th:href="@{/confirm/} + ${booking.id_booking}" >Thay đổi</a> </td>
         </tr>
     </th:block>
     </tbody>
