dùng 404 thì lỗi full css, đang khắc phục

--- a/src/main/resources/templates/404notfound.html
+++ b/src/main/resources/templates/404notfound.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" th:href="@{/css/test.css}"/>
+    <link rel="stylesheet" th:href="@{/css/css.css}"/>
+
 
 </head>
 <body>
-<h1>CHạy thử</h1>
+<h2>CHạy thử</h2>
 <div id="rocket"></div>
 <hgroup>
     <h1>Page Not Found</h1>
